--- a/res/layout/sqlview.xml
+++ b/res/layout/sqlview.xml
@@ -4,6 +4,14 @@
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="SQL List"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
