--- a/res/layout/sqliteexample.xml
+++ b/res/layout/sqliteexample.xml
@@ -5,6 +5,14 @@
     android:orientation="vertical" >
 
     <TextView
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="Database Test"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -23,7 +31,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="HotorNot" />
+        android:text="Date" />
 
     <EditText
         android:id="@+id/etSQLHotness"
@@ -31,18 +39,25 @@
         android:layout_height="wrap_content"
         android:ems="10" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
-    <Button
-        android:id="@+id/bSQLUpdate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="UpdateSQL" />
+        <Button
+            android:id="@+id/bSQLUpdate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="UpdateSQL" />
 
-    <Button
-        android:id="@+id/bSQLOpenView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="OpenDB" />
+        <Button
+            android:id="@+id/bSQLOpenView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="OpenDB" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/textView3"
@@ -56,22 +71,31 @@
         android:layout_height="wrap_content"
         android:ems="10" />
 
-    <Button
-        android:id="@+id/btnGetInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Get Info" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
-    <Button
-        android:id="@+id/btnEdit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Edit Entry" />
+        <Button
+            android:id="@+id/btnGetInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Get Info" />
 
-    <Button
-        android:id="@+id/btnDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Delete Entry" />
+        <Button
+            android:id="@+id/btnEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Edit Entry" />
+
+        <Button
+            android:id="@+id/btnDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Delete Entry" />
+
+    </LinearLayout>
 
 </LinearLayout>
